# calico

./: .gitignore  CMakeLists.txt  Catnip.cmake  LICENSE  Makefile  README.md  isan.mk
docs/: common.doxyfile  ds9.doxyfile  groups.h  layout.xml  pages.h  threads.md
include/: calico.h  isan.h
include/calico/: asm.inc  types.h
include/calico/arm/: cache.h  common.h  cp15.h  mpu.h  psr.h
include/calico/dev/: ar6k.h  blk.h  disc_io.h  dldi.h  dldi_defs.h  fugu.h  mwl.h  netbuf.h  sdio.h  sdmmc.h  tmio.h  tmio_regs.h  wlan.h  wpa.h
include/calico/dev/ar6k/: base.h  bmi.h  dev.h  htc.h  wmi.h
include/calico/dev/mwl/: calib.h  dev.h  mlme.h  regs.h  types.h
include/calico/gba/: bios.h  dma.h  io.h  irq.h  keypad.h  lcd.h  mm.h  timer.h
include/calico/nds/: bios.h  dma.h  env.h  gbacart.h  io.h  irq.h  keypad.h  lcd.h  mic.h  mm.h  mm_env.h  ndma.h  nitrorom.h  ntrcard.h  pm.h  pxi.h  scfg.h  smutex.h  sound.h  system.h  timer.h  tlnc.h  touch.h  wlmgr.h
include/calico/nds/arm7/: aes.h  codec.h  debug.h  gpio.h  i2c.h  mcu.h  mic.h  ntrwifi.h  nvram.h  pmic.h  rtc.h  sound.h  spi.h  tsc.h  twlblk.h  twlwifi.h
include/calico/nds/arm9/: arm7_debug.h  mic.h  ovl.h  sound.h  vram.h
include/calico/system/: condvar.h  dietprint.h  irq.h  mailbox.h  mutex.h  sysclock.h  thread.h  tick.h
include/isan/: arm.h  asm.inc  gba_io.h  hardware.h  irq.h  types.h
include/isan/gba/: bios.h  io.h  irq.h  keypad.h  mm.h
mk/: gba-cart.specs  gba_rules  isan_rules
share/: ds7.ld  ds7.specs  ds9-legacy.ld  ds9-legacy.specs  ds9.ld  ds9.specs  gba-cart.ld  gba-cart.specs  gba-mb.ld  gba-mb.specs
source/: irq.c  irq_handler.32.s
source/arm/: arm-aes.32.s  arm-cache.32.s  arm-context.32.s  arm-copy-fill.32.s  arm-readtp.32.s  arm-shims-mpu.32.c  arm-shims.32.c  irq-lock.32.c
source/dev/: dldi_stub.s  fugu.32.c  sdio.c  sdmmc.c  tmio.c  wlan.c  wpa.c
source/dev/ar6k/: ar6k_bmi.c  ar6k_dev.c  ar6k_htc.c  ar6k_wmi.c  common.h
source/dev/mwl/: common.h  mwl_calib.16.c  mwl_dev_base.16.c  mwl_dev_bbp_rf.c  mwl_dev_irq.32.c  mwl_dev_misc.c  mwl_dev_task.c  mwl_mgmt_frame.16.c  mwl_mlme.c  mwl_rx.c  mwl_tx.c
source/gba/: bios.s  crt0.s  crt0_common.inc  crt0_mb.s  dma_fill_buf.c  irq_handler.32.s  rom_header.s  rom_header_common.inc  rom_header_mb.s
source/nds/: bios.s  bios.twl.s  crt0.h  gbacart.c  irq_handler.32.s  keypad.c  mpu_setup.crt0.s  netbuf.c  nitrorom.c  ntrcard.c  pm.c  pxi.c  smutex.32.c  startup.crt0.c  tlnc.twl.c  transfer.h  utils.crt0.s
source/nds/arm7/: ar6k.twl.32.c  blk.c  blk.twl.32.c  bootstub_arm7.s  codec.twl.c  debug.c  env.c  gpio.twl.c  i2c.twl.c  mcu.twl.c  mic.32.c  nvram.c  pm_arm7.c  pmic.c  rtc.c  scfg.twl.c  sdio.twl.32.c  sdmmc.twl.32.c  spi.c  tmio.twl.32.c  touch.c  tsc.c  wifi.ntr.c  wifi.twl.32.c  wlmgr.c  wpa.twl.32.c  wpa_aes.twl.s  wpa_hmac_sha1.twl.32.c
source/nds/arm7/sound/: common.h  sound.c  sound_pxi.c
source/nds/arm9/: arm7_debug.c  blk.c  bootstub_arm9.s  excpt_handler.32.s  mic.c  mpu_setup.crt0.s  nitrorom.c  ovl.c  pm_arm9.c  sound.c  sys_startup.c  touch.c  wlmgr.c
source/nds/pxi/: blkdev.h  mic.h  pm.h  reset.h  sound.h  wlmgr.h
source/system/: dietprint.c  irq.c  mailbox.c  mutex.c  newlib_syscalls.c  thread-priv.h  thread_cold.c  thread_hot.32.c  tick.c
